4 June 2014: Wouter
	- Patch from Pavel Simerda. This, among other things, allows to
	  restart unbound and/or dnssec-trigger without restarting
	  NetworkManager when it's configured not to touch the DNS.
	  And, avoid Filenotfounderror not available in python 2,
	  https://bugzilla.redhat.com/show_bug.cgi?id=1100794
	  And fix unbound output parser
	  https://bugzilla.redhat.com/show_bug.cgi?id=1100796

22 May 2014: Wouter
	- release 0.12.
	- trunk is 0.13 in development.
	- updated authority server addresses builtin to dnssec-trigger for
	  d root server (ipv4) and c root server (ipv6) for its tests.

7 May 2014: Wouter
	- Updated dnssec-trigger-script.in to distinguish secure and
	  insecure zones, and to flush the unbound cache on DNS server
	  list changes. (from Pavel Simerda).

15 April 2014: Wouter
	- Change the ip-address of tcp and ssl service from broer.nlnetlabs.nl
	  to zus.nlnetlabs.nl (we changed netblocks).  The new ip address
	  and new certificate fingerprint (because of ssl heartbleed vuln)
	  are in the example.conf file.  The cert was only used for transport
	  and not for authentication, so its change was low priority.

8 April 2014: Wouter
	- Patch for dnssec-trigger-script.in --async flag from Pavel Simerda,
	  stops dnssec-trigger-script to block on networkmanager, which is
	  good in cases when networkmanager blocks on the script.

28 March 2014: Wouter
	- Patch from Pavel Simerda that incorporates contrib items into
	  the build install system.  Systemd scripts, dnssec-trigger-script,
	  dnssec.conf.

24 March 2014: Wouter
	- Renamed 01-dnssec-trigger-hook to 01-dnssec-trigger with the
	  networkmanager naming scheme.  (From Pavel Simerda).
	- put contrib/01-dnssec-trigger into 01-dnssec-trigger.in

24 March 2014: Wouter
	- Removed files obsoleted by patch from Pavel Simerda:
	  contrib/01-dnssec-trigger-hook-new_nm
	  (replaced with dnssec-trigger-script and 01-dnssec-trigger)
	  fedora/dnssec-triggerd.service